Update README with project description, images, and build instructions